# SimulAI

./: .clangd  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  dockercmd.md  requirements.txt
Planner/: planner.md
src/: imgui.ini
src/autoconfig/: ActionMagic.lua  ActionUSA.lua  IndexConfig.hpp  IndexMagicConfig.hpp  LuaModder.hpp  MagicTree.json  Root.hpp  RootImGuiAuto.hpp  RootLua.cpp  RootLua.hpp  RootLua_0.cpp  RootLua_1.cpp  RootLua_2.cpp  RootLua_3.cpp  SetterClass.hpp  TestUtil.cpp  TestUtil.hpp  Tree.json  UtilitySystem.hpp  UtilitySystemMagic.hpp
src/ini_fld/DebugTestINI/: action.ini  index.ini  index30.ini  main.lua  us_mil.ini
src/ini_fld/DebugTestINI/Lua/: main.lua
src/ini_fld/DebugTestINI/Lua/Action/: action_magic.lua  action_usa.lua  us_act.lua
src/ini_fld/DebugTestINI/Lua/Event/: Superevent.lua  normal_event.lua
src/ini_fld/DebugTestINI/Lua/Event/zombie/: zombie.lua
src/ini_fld/DebugTestINI/Lua/Utility/: Ecnomy.lua  Ecnomy.md
src/ini_fld/DebugTestINI/magic/: magic.ini  magicAct.ini  testact.ini
src/ini_fld/LuaModding/: main.lua
src/ini_fld/LuaModding/UtilityAI/: utility.lua
src/ini_fld/README/: AI_Read.md  AI_Read_Simple.md  WriteRuleHuman.md
src/ini_fld/jsonnetACt/: action_usa.json
src/main/: SimulAI.cpp  SimulAI.hpp
src/main/LuaBind/: LuaBind.cpp  LuaBind.hpp
src/main/LuaBind/AI/: utilityai.cpp  utilityai.hpp
src/main/State/: state.cpp  state.hpp
src/main/cppGUI/: WorldStateLoader.cpp  gui_main.cpp  gui_main.hpp
src/main/vector/: vector_init.cpp  vector_init.hpp
src/opengl_setting/glad/include/glad/: glad.h
src/opengl_setting/glad/src/: glad.c
src/pyauto/: main.py  mainrun.py
src/pyauto/data/: maindata.py
src/pyauto/data/filesys/: filesystem_manage.py
